세션을 위한 servlet-api 디펜던시 추가

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ repositories {
 dependencies {
     // web
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'javax.servlet:servlet-api:2.5'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     // config
