--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,6 @@ sourceCompatibility = '1.8'
 
 configurations {
     developmentOnly
-    runtimeClasspath {
-        extendsFrom developmentOnly
-    }
     compileOnly {
         extendsFrom annotationProcessor
     }
@@ -23,15 +20,14 @@ repositories {
 }
 
 dependencies {
+
     // web
 //    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'javax.servlet:servlet-api:2.5'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     // config
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:2.1.1'
 
     // jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -49,5 +45,5 @@ dependencies {
 
     // test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.security:spring-security-test'
+//    testImplementation 'org.springframework.security:spring-security-test'
 }
